src/components/Nav/LocationForm/InputForm/InputForm.css
.location-form__input-container {
	display: flex;
	align-items: center;
	gap: 0.5rem;

	padding: 0.625rem 1rem;
	border-radius: 100px;
	background-color: var(--soft-lavender-gray);
}

.location-form__input {
	outline: none;
	border: none;
	background-color: inherit;
}

.location-form__input::placeholder {
	color: var(--midnight-ink);
	opacity: 0.5;
}

.location-form__input-cancel {
	color: var(--deep-indigo);
	cursor: pointer;
}

